--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.3.1",
     "lucide-react": "^0.575.0",
+    "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-avatar": "^5.0.4",
     "react-dom": "^19.2.0",
