--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.3.1",
+    "js-abbreviation-number": "^1.4.0",
     "lucide-react": "^0.575.0",
     "moment": "^2.30.1",
     "react": "^19.2.0",
