--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-avatar": "^5.0.4",
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-player": "^3.4.0",
+    "react-router-dom": "^7.13.0",
+    "react-video": "^1.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
