--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.2.0",
     "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-avatar": "^5.0.4",
@@ -17,7 +18,8 @@
     "react-icons": "^5.5.0",
     "react-player": "^3.4.0",
     "react-router-dom": "^7.13.0",
-    "react-video": "^1.5.3"
+    "react-video": "^1.5.3",
+    "tailwindcss": "^4.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
